fix: avoid scrollbar

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -551,7 +551,7 @@ body {
       right: 0;
       top:0;
       width: 620px;
-      height: 100vh;
+      height: 200vh;
       box-shadow: 0 0 0 9999px rgba(0,0,0, 0.5);
     }
 
@@ -712,8 +712,7 @@ body {
     }
 
     .video {
-      height: 418px;
-      width: auto;
+      width: 100%;
     }
   
     .play {     
@@ -772,7 +771,7 @@ body {
       right: 0;
       top:0;
       width: 100%;
-      height: 100vh;
+      height: 200vh;
       box-shadow: 0 0 0 9999px rgba(0,0,0, 0.5);
     }
 
